--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -93,6 +93,12 @@
                 <version>RELEASE</version>
                 <scope>compile</scope>
             </dependency>
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <scope>provided</scope>
+                <version>1.18.34</version>
+            </dependency>
 
         </dependencies>
 
